[package]
name = "wasm-locomotive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.83"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3.60"
convert-js = "1.0.0-alpha.11"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "Navigator",
    "Location",
    "DomTokenList",
    "NodeList",
    "Event",
    "History",
    "ScrollRestoration",
    "HtmlElement",
    "KeyboardEvent",
    "DomRect",
    "DomStringMap",
    "ScrollToOptions",
    "ScrollBehavior",
    "WheelEvent",
    "HtmlCollection",
    "CssStyleDeclaration",
    "MouseEvent"
]


[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'